# frame_msg_python

./: CHANGELOG.md  README.md  pyproject.toml
docs/: requirements.txt
docs/source/: api.rst  conf.py  frame_msg.rst  index.rst
src/frame_msg/: __init__.py  frame_msg.py  rx_audio.py  rx_auto_exp_result.py  rx_imu.py  rx_metering_data.py  rx_photo.py  rx_tap.py  tx_auto_exp_settings.py  tx_capture_settings.py  tx_code.py  tx_image_sprite_block.py  tx_manual_exp_settings.py  tx_plain_text.py  tx_sprite.py  tx_sprite_coords.py  tx_text_sprite_block.py
src/frame_msg/lua/: audio.lua  camera.lua  data.lua  data.min.lua  image_sprite_block.lua  sprite.lua  sprite_coords.lua  tap.lua  text_sprite_block.lua
src/frame_msg/rx/: __init__.py  audio.py  imu.py  photo.py  tap.py
src/frame_msg/tx/: __init__.py  auto_exp_settings.py  capture_settings.py  code.py  image_sprite_block.py  manual_exp_settings.py  text_sprite_block.py
